# sre_demo_repo

./: .env.example  .gitignore  Makefile  README.md  main.py  overview.md  pyproject.toml
app/: db.py  main.py  models.py  schemas.py  seed.py  sentry.py  settings.py
app/services/: profile_service.py
assets/: incident-b-nontechnical-flow.drawio
fixtures/: config_snapshot.json  recent_commits.json
learnings/: incident-b-explainer.md
tasks/: phase_1.md  phase_2.md  phase_3.md  phase_4.md  phase_5.md  phase_6.md
tests/: conftest.py  test_profile_failure_modes.py  test_profile_success.py  test_sentry_init.py
